# inaminute

./: MANIFEST.in  README.md  pyproject.toml
src/inaminute/: __init__.py  __main__.py  delay.py
src/test_kwraight.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
